# cannbot-ascendc-vs-pypto

./: .gitignore  AGENTS.md  README.md  RELEASE_CHANGELOG.md  SKILL_TRACE.json  cn_12算子现状报告.md  cn_AGENTS.md  cn_OPERATOR_DEVELOPMENT_WORKFLOW.md  cn_PYPTO_WORKFLOW.md  cn_README.md  cn_VECTOR_OPERATOR_WORKFLOW.md  cn_cannbot_capability_inventory.md  cn_算子现状速查.md  parser_traceability_audit_report.md  parser_traceability_audit_results.json  run_pypto_msprof_all.sh  todo.md  算子性能对比表-完整版.md  算子性能对比表.md
archives/: ARCHIVE_MANIFEST.json  cannbot_ascendc_vs_pypto_add_v1.tar.gz.sha256  cannbot_ascendc_vs_pypto_equal_v4.tar.gz.sha256  cannbot_ascendc_vs_pypto_mul_v1.tar.gz.sha256  cannbot_ascendc_vs_pypto_not_v4.tar.gz.sha256  cannbot_ascendc_vs_pypto_or_v4.tar.gz.sha256  cannbot_ascendc_vs_pypto_relu_v1.tar.gz.sha256  cannbot_ascendc_vs_pypto_where_v4.tar.gz.sha256
common/benchmark/: __init__.py  benchmark_utils.py
common/correctness/: __init__.py  correctness.py
common/profiler/: __init__.py  parse_profiler.py  parse_profiler_v2.py  profiler_utils.py  run_profiler.py
common/reporting/: __init__.py  reporting.py
common/schemas/: experiment_schema.json
config/: gates.yaml  skill_routing.yaml
dashboard/: README.md  dashboard.css  dashboard.js  dashboard.json  dashboard.py  download_dashboard.sh  index.html
docs/: ARCHIVE_POLICY.md  ASCENDC_WORKFLOW.md  CUBE_OPERATOR_TEMPLATE_V2.md  CUBE_OPERATOR_WORKFLOW.md  LOCAL_ARTIFACTS.md  OPERATOR_DEVELOPMENT_WORKFLOW.md  PYPTO_WORKFLOW.md  SKILL_SELECTION_MATRIX.md  VECTOR_OPERATOR_WORKFLOW.md  cannbot_capability_inventory.json  cannbot_capability_inventory.md  cn_ASCENDC_WORKFLOW.md  cn_CUBE_OPERATOR_WORKFLOW.md  cn_SKILL_SELECTION_MATRIX.md
docs/process/: cn_design.md  cn_remaining_gaps.md
environment/: environment_manifest.json  preflight.sh
historical_reports/: README.md
operators/: README.md
operators/add/: README.md  REPRODUCE.md  SHA256SUMS  SKILL_TRACE.json  SKILL_TRACE.md  SPEC.yaml  TASK_STATE.json  experiment_config.yaml
operators/div/: .orchestrator_state.json  README.md  REPRODUCE.md  SHA256SUMS  SKILL_TRACE.json  SKILL_TRACE.md  SPEC.yaml  TASK_STATE.json  experiment_config.yaml
operators/div/ascendc/: CMakeLists.txt  artifact_manifest.json
operators/div/ascendc/src/: div_host.asc  div_kernel_baseline.asc  div_kernel_optimized.asc  div_tiling.h
operators/equal/: README.md  REPRODUCE.md  SHA256SUMS  SKILL_TRACE.json  SKILL_TRACE.md  SPEC.yaml  TASK_STATE.json  experiment_config.yaml
operators/expand/: README.md  REPRODUCE.md  SHA256SUMS  SKILL_TRACE.json  SKILL_TRACE.md  SPEC.yaml  TASK_STATE.json  experiment_config.yaml
operators/layernorm/: SHA256SUMS  SPEC.yaml  TASK_STATE.json  experiment_config.yaml
operators/matmul/: README.md  REPRODUCE.md  SHA256SUMS  SKILL_TRACE.json  SKILL_TRACE.md  SPEC.yaml  (+2 more)
operators/reduce_sum/ascendc/: CMakeLists.txt  artifact_manifest.json
operators/reduce_sum/ascendc/src/: reduce_sum_fp32_kernel.asc  reduce_sum_host.asc  reduce_sum_host_fp32.asc  reduce_sum_kernel.asc  reduce_sum_tiling.h
operators/relu/ascendc/: CMakeLists.txt  artifact_manifest.json
operators/relu/ascendc/src/: data_utils.h  relu_host.asc  relu_kernel.asc  relu_tiling.h
operators/transpose/ascendc/: CMakeLists.txt  artifact_manifest.json
operators/transpose/ascendc/src/: todo.md  transpose_host.asc  transpose_kernel.asc  transpose_kernel_rc2.asc  transpose_tiling.h
reports/: cleanup_manifest.json  device_side_final_report.md  device_side_plan.md  operator_summary.json  operator_summary.md  project_audit_after.json  project_audit_after.md
scripts/: acquire_npu_lock.sh  generate_final_reports.py  pre_kernel_commit_gate.sh  pre_release_gate.sh  rebuild_release.py  release_npu_lock.sh  run_msprof_logical_ops.sh  run_msprof_logical_ops_part2.sh  run_profiler_queue.sh  run_with_npu_lock.sh  update_release_profiler.py
templates/cube_operator_template/ascendc/: CMakeLists.txt  artifact_manifest.json
templates/cube_operator_template/ascendc/src/: cube_compute.h  cube_config.h  cube_copy.h  cube_schedule.h  cube_store.h  op_host.cpp  op_kernel.asc  op_tiling.h
tools/: check_gate.py  rebuild_final_data.py  verify_cannbot_usage.py
(+3907 files in other folders)
